k8s/minikube/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          resources:
            requests:
              cpu: "250m"
              memory: "750Mi"
            limits:
              cpu: "250m"
              memory: "750Mi"
          volumeMounts:
            - name: grafana-pv
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
