k8s/minikube/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: NodePort # Explicitly set the type
  selector:
    app: grafana
  ports:
    - port: 3000 # Service port (cluster-internal)
      targetPort: 3000 # Pod port (must match Grafana container port)
      nodePort: 32000 # Optional: Manually assign a port (30000-32767)
